07-k8s-apps-development/02-skaffold/03-skaffold-init/.k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/todo-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: CORS_ACTIVE
              value: "true"
            - name: TODO_APP_API
              value: localhost:3000
            - name: TODO_APP_TITLE
              value: Kompose
          image: todo-app-frontend:0.0.1
          name: todo-app-frontend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
