07-k8s-apps-development/02-skaffold/03-skaffold-init/.k8s/todo-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: todo-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/todo-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/todo-network: "true"
